Apply unit tests